css/custom.css
/* ... */
.wo-calendar--light .wo-day:not(.wo-day[disabled]) .wo-day__label:hover,
.wo-calendar--light .wo-day:not(.wo-day[disabled]) .wo-day__label:focus {
  background-color: rgba(220, 202, 153, 0.2);
  color: #030e14;
}

.wo-calendar--light .wo-calendar__button:hover,
.wo-calendar--light .wo-calendar__button:focus {
  border: 1px solid #dcca99;
  color: #dcca99;
}

.filter-calendar {
  display: none;
  padding: 33px 63px;
  position: absolute;
  right: 0;
  top: 100%;
  border: 1px solid #dddeda;
  border-radius: 5px;
  background-color: #fff;
  transform: translate3d(0, 10px, 0);
  z-index: 9;
}

.calendar-btn__close {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 5rem;
  display: none;
  justify-content: center;
  align-items: center;
  font-weight: 400;
  font-size: 15rem;
  line-height: 25rem;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #030e14;
  background-color: #fff;
  z-index: 100;
}

.calendar-btn--active .filter-calendar {
  display: block;
}

.calendar-btn--active .calendar-btn__close {
  display: flex;
}

.calendar-btn__input {
  width: 100px;
  border: none;
  font-weight: 400;
  font-size: 15rem;
  line-height: 25rem;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #030e14;
  pointer-events: none;
}

.calendar-btn__input::placeholder {
  color: #030e14;
}

.calendar-btn:hover .calendar-btn__input,
.calendar-btn:hover .calendar-btn__input::placeholder,
.calendar-btn:hover .calendar-btn__close {
  color: #dcca99;
}

.calendar-btn__reset {
  display: none;
  padding-right: 15.5rem;
  padding-left: 15.5rem;
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  background-color: white;
  z-index: 10;
}

.calendar-btn--selected .calendar-btn__reset {
  display: inline-block;
}

@media screen and (min-width: 1920px) {
  .cms-li_content .booktickets-btn,
  .cms-li_content .cms-li_price {
    display: none;
  }

  .event-row_right-col > * {
    max-width: 755rem;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width: 1280px) {
  .head-event-content {
    min-height: calc(100vh - 146rem);
  }

  .bech-slider__slides {
    height: 900rem;
  }
}

@media screen and (max-width: 991px) {
  .catalog-column .h1-75-90 {
    margin-left: -30rem;
  }

  .cms-li_time-div .p-30-45 {
    min-width: 190rem;
  }
}

@media screen and (max-width: 765px) {
  .center-col .link-foo-small,
  .center-col .foo-marger {
    display: none;
  }

  .navbar.grey-head {
    /* background-image: -webkit-gradient(
      linear,
      left top,
      left bottom,
      color-stop(30%, #030e14),
      color-stop(65%, rgb(3 14 20 / 80%)),
      to(transparent)
    );
    background-image: linear-gradient(
      180deg,
      #030e14 30%,
      rgb(3 14 20 / 80%) 65%,
      transparent
    ); */
  }

  .navbar.grey-head {
    background-color: transparent;
  }

  .navbar {
    background-image: linear-gradient(
      180deg,
      #f5f5f0 30%,
      #f5f5f005 65%,
      transparent
    );
  }

  .payment-tabs {
    width: 100%;
  }
}

@media screen and (max-width: 495px) {
  .head-event-image {
    display: none;
  }

  .head-event-image_mob {
    display: block;
    flex: 0 0 auto;
    height: 100%;
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
  }
  .navbar {
    background-image: none;
  }
  .head-event-content {
    min-height: calc(100vh - 160rem);
  }

  .catalog-column .h1-75-90 {
    margin-left: 20rem;
  }

  .catalog-column:after {
    content: '';
    position: absolute;
    z-index: -1;
    background: white;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
    top: 25rem;
    border-radius: 60px 0px 0px 0px;
  }

  .payment-tabs {
    width: calc(100% + 20rem);
  }

  .form-filter-press .filter-chek {
    margin-right: 0rem;
  }
}

@media only screen and (orientation: landscape) and (max-height: 495px) {
  .body * {
    opacity: 0;
  }

  .body:after {
    content: '';
    content: '';
    background: url(https://uploads-ssl.webflow.com/624c5364ec3046603b0a108f/62b317d53ecbe881bb1e3e39_rotation.png);
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 40px;
    transform: rotateY(180deg);
  }
}

